Wed Jul  2 09:48:42 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* logger.rb: removed unmaintain code.
	  [Feature #9860][ruby-core:62724]
	* test/logger/test_application.rb: ditto.

Wed Jul  2 03:20:00 2014  Charlie Somerville  <charliesome@ruby-lang.org>

	* node.c (dump_node): handle nd_value == (NODE *)-1 to mean this
	  keyword argument is required

Wed Jul  2 02:57:27 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm.c (rb_vm_env_local_variables): returns array of local
	  variable name symbols in the environment by envval.

	* proc.c (bind_local_variables): use rb_vm_env_local_variables.

Wed Jul  2 02:23:52 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* proc.c (bind_receiver): new method to return the bound receiver
	  of the binding object.  [ruby-dev:47613] [Feature #8779]

Wed Jul  2 02:14:37 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* proc.c (bind_local_variables): update env from envval for each
	  iterations.  [ruby-dev:48351] [Bug #10001]

Tue Jul  1 23:46:34 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* NEWS: [DOC] mention about Binding#local_variables, introduced at
	  r44392 (see [Feature #8773]).

Tue Jul  1 23:30:51 2014  CHIKANAGA Tomoyuki  <nagachika@ruby-lang.org>

	* numeric.c (num_step_scan_args): table argument of rb_get_kwargs() is
	  array of IDs, not Symbols. [ruby-dev:48353] [Bug #9811]

Tue Jul  1 16:18:22 2014  Akinori MUSHA  <knu@iDaemons.org>

	* ext/digest/lib/digest/hmac.rb, test/digest/test_digest_hmac.rb:
	  Digest::HMAC is finally removed as previously noticed.
	  [fix GH-648]

Tue Jul  1 11:13:43 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* ext/date/lib/date/format.rb: removed empty file by @vipulnsward.
	* ext/date/lib/date.rb: removed needless require.
	  [fix GH-647]

Mon Jun 30 16:42:52 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_stat_internal): return size_t value instead of VALUE
	  and remove `out' parameter.

	* gc.c: add braces for `if' statements.
